tests/fail/arity2.juna
type t =
| T : forall a, a -> a -> t
end

T 2